# mfgtools

./: .travis.yml  CMakeLists.txt  README.md  gen_ver.sh
libuuu/: CMakeLists.txt  gitversion.h.in
